@@ -1,10 +1,12 @@
 ## Process this file with automake to produce Makefile.in.
 
-LDADD = $(Z_LIBS) $(BZ_LIBS)
+INCLUDES = $(LIBGNOME_CFLAGS)
 
 bin_PROGRAMS = gnome2-man2html
 
 gnome2_man2html_SOURCES = gnome-man2html.c
+
+gnome2_man2html_LDADD = $(LIBGNOME_LIBS) $(Z_LIBS) $(BZ_LIBS)
 
 #CFLAGS += -Wall
 
